# labthings-picamera2

./: .gitignore  README.md  investigate_cameramanager.py  pyproject.toml  test_picamera.py  test_streamingpicamera.py
.github/workflows/: publish.yml
settings/camera/: settings.json
src/labthings_picamera2/: __init__.py  recalibrate_utils.py  server.py  thing.py
tests/: test_acquisition.py  test_exposure_time_drift.py  test_sensor_mode.py  test_tuning.py  test_tuning_workaround_in_picamera.py
